welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: reassignment to val
	if (isWeekend=true){
                     ^